# rnadraw

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_json.rs  gen_svg.rs  test_features.rs
crates/core/src/: geometry.rs  lib.rs  loops.rs  parser.rs  segments.rs  svg.rs  types.rs
crates/core/tests/: comprehensive.rs  generate_gt.mjs  ground_truth.rs
crates/core/tests/fixtures/: ground_truth.json
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
nix/: checks.nix  formatter.nix  packages.nix  shell.nix
