[package]
name = "rnadraw-wasm"
description = "RNA secondary structure SVG renderer WASM bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rnadraw-core.workspace = true
wasm-bindgen = "=0.2.108"
serde_json = "1"
